--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     }
   },
   "dependencies": {
+    "iview": "^2.6.0",
     "vue": "^2.3.3",
     "vue-electron": "^1.0.6",
     "vue-router": "^2.5.3",
